issue on too narrow screens

--- a/media/guiben-screen.css
+++ b/media/guiben-screen.css
@@ -191,7 +191,7 @@ em {
 }
 
 #content {
-  width: 33%;
+  width: 73%;
   margin: 0 auto;
 }
 
